--- a/bookmark_manager/Gemfile
+++ b/bookmark_manager/Gemfile
@@ -1,7 +1,16 @@
 # frozen_string_literal: true
 source "https://rubygems.org"
 
+ruby '2.4.0'
 
 gem 'data_mapper'
 gem 'dm-postgres-adapter'
 # gem "rails"
+
+gem 'sinatra'
+gem 'selenium-webdriver'
+
+group :test do
+  gem 'rspec'
+  gem 'capybara'
+end
