--- a/bookmark_manager/Gemfile
+++ b/bookmark_manager/Gemfile
@@ -10,6 +10,8 @@ gem 'dm-postgres-adapter'
 gem 'sinatra'
 gem 'selenium-webdriver'
 
+gem 'database_cleaner'
+
 group :test do
   gem 'rspec'
   gem 'capybara'
